# auto-sre

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
autosre/: __init__.py  bench.py  cli.py  demo.py  hooks_installer.py  metrics.py  paths.py  precommit_scanner.py  service_installer.py  tmux.py  tui.py
autosre/backends/: __init__.py  anthropic_proxy.py  base.py  llamacpp.py  mlx_dflash.py  ollama.py  vllm.py  vllm_config.py  vllm_priority_preempt.pth  vllm_priority_preempt.py
autosre/backends/recipes/: __init__.py  qwen3.6-35b-a3b-fp8.yaml
autosre/claude_hooks/: HOOK_INPUTS.md  __init__.py  _io.py  post_commit_scan_update.py  posttooluse_audit.py  precompact_context.py  pretooluse_bash_guard.py  pretooluse_plan_review.py  stop_session_check.py  subagent_plan_context.py  telemetry_async.py  user_prompt_submit_branch_check.py
autosre/cluster/: __init__.py  manager.py  status.py
autosre/demos/: __init__.py  audience.py  runner.py  scenario.py
autosre/demos/scenarios/: agent-swarm-showcase.yaml  coding-productivity.yaml  data-sovereignty.yaml  deep-tech.yaml  enterprise-overview.yaml  quick-impact.yaml  tech-debt-audit.yaml
autosre/dropbox/: config.py  credentials.py  filebrowser.py  installer.py  proxy.py  state_init.py
autosre/eval/: __init__.py  capture.py  differ.py  extract.py  findings.py  judge.py  lenient_json.py  report.py  runner.py  snapshot.py  suite.py
autosre/eval/suites/: a11y.yaml  coverage.yaml  dead-code.yaml  duplication.yaml  i18n.yaml  leakage.yaml  quality.yaml  security.yaml  tech-debt.yaml  ui-consistency.yaml
autosre/hooks_backend/: __init__.py  guard.py  recipe_ci_check.py  recipe_guard.py  recipe_precommit.py  stop_check.py
autosre/hooks_backend/config/: guard-rules.yaml
autosre/infra/: __init__.py  config.py  keys.py  ssh.py  types.py
autosre/mcp_servers/: __init__.py  capabilities.py  fetch.py  search.py  settings.py
autosre/perf/: __init__.py  baseline.py  boot.py  harness.py  report.py  smoke.py  workloads.py
autosre/provision/: __init__.py  lifecycle.py  provisioner.py
autosre/review/: __init__.py  _local_provider_runner.py  chain.py  cli_plan.py
autosre/swarm/: __init__.py  launcher.py  templates.py
benchmarks/: README.md
benchmarks/baselines/: boot_gb10_current.json  boot_gb10_current.md  boot_gb10_hardened.json  boot_gb10_hardened.md  gb10_qwen36_fp8_baseline_parity.json  gb10_qwen36_fp8_baseline_parity.md  gb10_qwen36_fp8_flashinfer.json  gb10_qwen36_fp8_flashinfer.md  gb10_qwen36_fp8_flashinfer_16384.json  gb10_qwen36_fp8_flashinfer_16384.md  gb10_qwen36_fp8_flashinfer_8192.json  gb10_qwen36_fp8_flashinfer_8192.md
deploy/example/: README.md  dropbox.toml
deploy/example/systemd/: autosre.service.template
scripts/: run-mypy.sh  run-ruff.sh
tests/: __init__.py  conftest.py  test_autosre_integration.py  test_backend_contract.py  test_base.py  test_claude_command_hooks.py  test_claude_hooks.py  test_claude_hooks_io.py  test_cli.py  test_cluster.py  test_demos.py  test_dropbox_config.py  test_dropbox_credentials.py  test_dropbox_installer.py  test_dropbox_proxy.py  test_eval_capture.py  test_eval_cli.py  test_eval_differ.py  test_eval_extract_runner.py  test_eval_findings.py  test_eval_lenient_json.py  test_eval_report.py  test_eval_snapshot.py  test_eval_suite.py  test_hooks_backend_guard.py  test_hooks_backend_stop_check.py  test_hooks_installer.py  test_infra_config.py  test_infra_keys.py  test_infra_ssh.py  test_infra_types.py  test_lifecycle.py  test_llamacpp.py  test_mcp_capabilities.py  test_mcp_fetch.py  test_mcp_search.py  test_mcp_settings.py  test_metrics.py  test_ollama.py  test_paths.py  (+12 more)
tests/integration/: test_review_loop.py
